k8s/wordpress/wp-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp-dep
  template:
    metadata:
      labels:
        app: wp-dep
    spec:
      containers:
        - name: wp-dep
          image: wordpress:5
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  labels:
    app: wp-dep
spec:
  type: NodePort
  selector:
    app: wp-dep
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30088
